[global]
quiet = 1

[metadata]
name = kube-secrets-utility
description = Utility for dumping, updating, backing up Kubernetes secrets
author = Yifan Wu
author-email = tyivanwu@gmail.com
version = 0.0.1

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =
    pyyaml
    click

[options.entry_points]
console_scripts =
    ksu=kube_secrets_utility.entry:main
    kube-secrets-utility=kube_secrets_utility.entry:main